# bfc

./: .gitignore  CMakeLists.txt  README.md  bfc.cpp  bfc.hpp  bfir.hpp  cli.cpp  cli.hpp  irc.cpp  irc.hpp  jit.cpp  jit.hpp  main.cpp  makefile  utils.cpp  utils.hpp
bfrt/: bfrt.c  bfrt.h  tiny_kernel32.def
bfrtjit/: bfrtjit.cpp
examples/: README.txt  helloworld.bf
stdbf/: stdbf.c
stdbfjit/: stdbfjit.cpp  stdbfjit.hpp
